--- a/frontend/app/demo.html
+++ b/frontend/app/demo.html
@@ -40,7 +40,7 @@
                                 <path fill-rule="evenodd" d="M12.5 15a.5.5 0 0 1-.5-.5v-13a.5.5 0 0 1 1 0v13a.5.5 0 0 1-.5.5ZM10 8a.5.5 0 0 1-.5.5H3.707l2.147 2.146a.5.5 0 0 1-.708.708l-3-3a.5.5 0 0 1 0-.708l3-3a.5.5 0 1 1 .708.708L3.707 7.5H9.5a.5.5 0 0 1 .5.5Z"/>
                               </svg>
                         </div>
-                        <h3>Auto Agents Chat</h3>
+                        <h3>Auto Agents Chat 222</h3>
                     </div>
                     <div class="card-body" id="chatView">
                         <div class="intro text-center" id="intro">
